# wrashpty

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  IMPLEMENTATION_PLAN.md  LICENSE  Makefile  README.md  build.rs  pr-summary.md
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
crates/command-schema-core/: Cargo.toml
crates/command-schema-core/src/: lib.rs  merge.rs  package.rs  types.rs  validate.rs
crates/command-schema-discovery/: Cargo.toml
crates/command-schema-discovery/src/: cache.rs  discover.rs  extractor.rs  lib.rs  main.rs  output.rs  parser.rs  report.rs  version.rs
crates/command-schema-discovery/src/parser/: ast.rs  classify.rs  confidence.rs  constraints.rs  diagnostics.rs  merge.rs  mod.rs  normalize.rs
crates/command-schema-discovery/src/parser/strategies/: gnu.rs  mod.rs  npm.rs  section.rs  usage.rs
crates/command-schema-discovery/tests/: cli_integration.rs  fixtures_parser.rs
crates/command-schema-discovery/tests/fixtures/: apt-cache-help.txt  apt-get-help.txt  apt-help.txt  cp-help.txt  git-help.txt  kubectl-help.txt  less-help.txt  ls-help.txt  mv-help.txt  node-help.txt  stty-help.txt  tar-help.txt
crates/command-schema-discovery/wrappers/node/command-schema-discovery/: package.json  tsconfig.json
crates/command-schema-discovery/wrappers/node/command-schema-discovery/src/: client.ts  index.ts  types.ts
crates/command-schema-discovery/wrappers/python/: pyproject.toml
crates/command-schema-discovery/wrappers/python/command_schema_discovery/: __init__.py  client.py  types.py
docs/: command-intelligence-refactor-todo.md  command-intelligence-spec.md  command-schema-discovery-production-plan.md  dependencies.md  loading-widget-design.md  schema-contract.md  scrollback.md  unified-intelligence-architecture.md
docs/ideas/: chrome-features.md  reedline-capabilities.md  tmux-integration.md
docs/mvp/: 00-complete-architecture.mermaid  01-mode-state-machine.mermaid  01-project-summary.md  02-architecture.md  02-shell-integration-protocol.mermaid  03-module-app.mermaid  03-scenarios-and-solutions.md  04-module-pty.mermaid  05-module-marker.mermaid  06-module-pump.mermaid  07-module-editor.mermaid  08-module-signals.mermaid  09-module-terminal-bashrc.mermaid  10-data-flow.mermaid
schemas/command-lists/: dev-devops-toolchains.csv  linux-superuser.csv
schemas/curated/: awk.json  cargo.json  cat.json  cp.json  curl.json  extraction-report.json  find.json  git.json  grep.json  ls.json  make.json  mv.json  rm.json  sed.json  ssh.json  systemctl.json  tar.json  wget.json
schemas/json-schema/: command-schema-v1.json  extraction-report-bundle-v1.json  extraction-report-v1.json
src/: app.rs  bashrc.rs  chrome.rs  complete.rs  config.rs  editor.rs  git.rs  history.rs  history_store.rs  lib.rs  main.rs  marker.rs  prompt.rs  pty.rs  pump.rs  safety.rs  signals.rs  suggest.rs  terminal.rs  types.rs
src/app/: commands.rs  drain.rs  mod.rs  scroll_view.rs  tests.rs  transitions.rs
src/chrome/: buffer_convert.rs  command_edit.rs  command_knowledge.rs  command_palette.rs  commands_panel.rs  core.rs  file_browser.rs  file_tree.rs  footer_bar.rs  glyphs.rs  help_panel.rs  help_view.rs  history_browser.rs  mod.rs  panel.rs  schema_browser.rs  settings_panel.rs  settings_view.rs  symbols.rs  tabbed_panel.rs  theme.rs
src/chrome/segments/: clock.rs  cwd.rs  duration.rs  git.rs  mod.rs  scroll.rs  status.rs
src/intelligence/: bootstrap.rs  db_schema.rs  error.rs  export.rs  fuzzy.rs  mod.rs  schema.rs  schema_index.rs  schema_provider.rs  scoring.rs  sessions.rs  suggest.rs  sync.rs  templates.rs  tokenizer.rs  types.rs  user_patterns.rs  variants.rs
src/intelligence/patterns/: flags.rs  hierarchy.rs  mod.rs  pipes.rs  sequences.rs
src/intelligence/schema/: extractor.rs  mod.rs  parser.rs  storage.rs  types.rs
src/scrollback/: alt_screen.rs  ansi.rs  boundaries.rs  buffer.rs  capture.rs  mini_input.rs  mod.rs  mode.rs  separator.rs  state.rs  viewer.rs
src/scrollback/features/: filter.rs  goto.rs  help.rs  mod.rs  search.rs  yank.rs
src/ui/: filter_input.rs  focus_style.rs  input_widgets.rs  loading_widget.rs  mod.rs  scrollable_list.rs  scrolling_text.rs  selection_ribbon.rs  text_width.rs  tree_state.rs  tree_view.rs
tests/: integration.rs  marker_tests.rs  panic_test.rs  scroll_view_integration.rs
