[workspace]
members = [".", "crates/command-schema-core", "crates/command-schema-discovery"]

[workspace.dependencies]
serde = "1.0"
serde_json = "1.0"
thiserror = "1.0"
regex = "1.10"
wait-timeout = "0.2"
tracing = "0.1"
chrono = "0.4"
clap = "4.5"
rayon = "1.10"
serde_yaml = "0.9"

[package]
name = "wrashpty"
version = "0.1.0"
edition = "2024"
rust-version = "1.86"

[dependencies]
# PTY and terminal control
portable-pty = "0.8"
reedline = { version = "0.45", features = ["sqlite"] }
rusqlite = { version = "0.37", features = ["bundled"] }
crossterm = "0.29"

# POSIX syscalls and signal handling
nix = { version = "0.27", features = ["term", "signal", "poll", "fs"] }
signal-hook = "0.3"
libc = "0.2"

# Process timeout handling
wait-timeout = { workspace = true }

# Cryptographic session tokens
getrandom = "0.2"

# Error handling
anyhow = "1.0"
thiserror = { workspace = true }

# Zero-allocation collections for hot paths
smallvec = "1.15.1"

# ANSI styling (used by reedline)
nu-ansi-term = "0.50"

# Temporary file handling
tempfile = "3.8"

# Logging
tracing = { workspace = true }
tracing-subscriber = "0.3"

# Path resolution
dirs = "5.0"

# Unicode display width and segmentation
unicode-width = "0.2.2"
unicode-segmentation = "1.11"

# TUI rendering primitives (Buffer, Rect, Style, Layout)
ratatui-core = "0.1"
# TUI widgets (Block, List, Paragraph, Tabs)
ratatui-widgets = "0.3"

# Regex for Makefile/config parsing
regex = { workspace = true }

# Serialization
serde = { workspace = true, features = ["derive"] }

# JSON parsing for package.json
serde_json = { workspace = true }

# TOML parsing for Cargo.toml
toml = "0.8"

# CLI argument parsing
clap = { workspace = true, features = ["derive"] }

# Time formatting for context bar
chrono = { workspace = true }

# Lazy static initialization
once_cell = "1.19"

# Clipboard access (for yank/copy feature)
arboard = "3"

command-schema-core = { path = "crates/command-schema-core" }

[dev-dependencies]
rexpect = "0.5"
assert_cmd = "2.0"
proptest = "1.4"
serial_test = "3.2"

[build-dependencies]
command-schema-core = { path = "crates/command-schema-core" }
serde_json = { workspace = true }

[profile.release]
lto = "thin"
opt-level = 3
