[package]
name = "command-schema-discovery"
version = "0.1.0"
edition = "2024"
rust-version = "1.86"

[[bin]]
name = "schema-discover"
path = "src/main.rs"

[dependencies]
command-schema-core = { path = "../command-schema-core" }
regex = { workspace = true }
tracing = { workspace = true }
clap = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde = { workspace = true, features = ["derive"] }
chrono = { workspace = true }
rayon = { workspace = true }
serde_yaml = { workspace = true }
